<resources>
    <string name="app_name">Portfolio_Kazak</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="about_me">Обо мне</string>
    <string name="education">Обучение</string>
    <string name="hobby">Хобби</string>
    <string name="plans">Мои планы</string>
    <string name="contacts">Контакты</string>
    <string name="name">Казак Агата Александровна</string>
    <string name="menu_home">Home</string>
    <string name="hobby_works">Посмотреть мои работы можно здесь:</string>
</resources>